--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,17 +1,18 @@
+/* CSS for Train Scheduler here */
 * {
   box-sizing: border-box;
 }
 
 .jumbotron {
-	background-color: green;
-	color: white;
+	background-color: 	#000080;
+	color: 	#FFD700;
 }
 
 .panel-default>.panel-heading {
-	background-color: orange;
-	color: white;
+	background-color: 	#000080;
+	color: 	#FFD700;
 }
 
 .btn {
-	background-color: green;
+	background-color: #AAAAAA;
 }
